--- a/materials/prepare_data.qmd
+++ b/materials/prepare_data.qmd
@@ -2,9 +2,8 @@
 pagetitle: GWAS
 ---
 
-# 1000G
+# Prepare 1000G data
 
-## Setup
 
 ```{r}
 # load libraries
@@ -12,36 +11,62 @@ library(tidyverse)
 library(janitor)
 ```
 
-## Individual metadata
+
+## PLINK2 files
+
+We use the PLINK files provided by the PLINK2 developers:
+
+```bash
+wget -O data/plink/all_hg38.pgen.zst "https://www.dropbox.com/s/j72j6uciq5zuzii/all_hg38.pgen.zst?dl=1"
+wget -O data/plink/all_hg38.pvar.zst "https://www.dropbox.com/scl/fi/id642dpdd858uy41og8qi/all_hg38_rs_noannot.pvar.zst?rlkey=sskyiyam1bsqweujjmxqv1h55&dl=1"
+wget -O data/plink/all_hg38.psam "https://www.dropbox.com/s/gyobtdi904m9bir/hg38_orig.psam?dl=1"
+
+unzstd --rm data/plink/all_hg38.pgen.zst
+unzstd --rm data/plink/all_hg38.pvar.zst
+```
+
+## Filter samples
 
 ```{r}
-# read sample info file
-sample_info <- read_tsv("http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/release/20130502/integrated_call_samples_v3.20200731.ALL.ped") |> 
-  clean_names()
+psam <- read_tsv("data/plink/all_hg38.psam") |> 
+  clean_names(replace = c("#" = ""))
 
-# read sample metadata
-# we get a warning because the original file had two trailing tabs on the header
-panel <- read_tsv("http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/release/20130502/integrated_call_samples_v3.20130502.ALL.panel",
-                  col_select = 1:4) |> 
-  clean_names()
+# filter samples and save to later filter with plink2
+set.seed(20250225)
+sample_info <- psam |> 
+  # unrelated individuals only
+  filter(pat == 0 & mat == 0) |> 
+  # sample 40% of individuals
+  slice_sample(prop = 0.4)
 
-# filter
-sample_info <- sample_info |> 
-  # keep only unrelated individuals
-  # 'other_comments' mostly refers to uncertain related individuals
-  filter(relationship == "unrel" & other_comments == 0) |> 
-  # keep only phase 3 genotypes (to reduce sample size for demo)
-  filter(phase_3_genotypes == 1)
-
-# join with super-population information
-sample_info <- sample_info |> 
-  left_join(panel |> select(sample, super_pop), 
-            by = c("individual_id" = "sample"))
-  
-# Save
 sample_info |> 
-  write_tsv("data/sample_info.tsv")
+  select(iid) |> 
+  write_tsv("data/plink/subset_sample_ids.tsv", 
+            col_names = FALSE)
 ```
+
+
+## Filter SNPs
+
+```{r}
+snps <- read_tsv("data/plink/all_hg38.pvar", 
+                 comment = "##", lazy = TRUE) |> 
+  clean_names(replace = c("#" = ""))
+
+# filter SNPs
+# retain only standard chromosomes, including PARs
+# only SNPs (no indels) with standard rs id
+# biallelic SNPs (remove duplicates)
+# variants occurring in multiple locations
+snps <- snps |> 
+  filter(chrom %in% c(1:22, "PAR1", "PAR2", "X", "Y") & 
+         ref %in% c("A", "C", "T", "G") & 
+         alt %in% c("A", "C", "T", "G") &
+         str_detect(id, "^rs") & 
+         vctrs::vec_duplicate_detect(paste(chrom, pos)) &
+         vctrs::vec_duplicate_detect(id))
+```
+
 
 ## Trait SNPs
 
@@ -52,26 +77,8 @@ To simulate traits, we exported summary tables from GWAS catalogue:
 - Continuous trait: caffeine consumption ("mg/day"); study accession [GCST001032](https://www.ebi.ac.uk/gwas/studies/GCST001032).
 - Continuous trait: pulse pressure measurement (mm Hg), i.e. the difference in pulse pressure between systolic and diastolic pressure; study accession [GCST001235](https://www.ebi.ac.uk/gwas/studies/GCST001235)
 
-We also download the list of SNPs from the 1000G server.
-We download the `wgs` file, which does not contain the actual genotypes, but contains all the SNPs, their location and allele frequency:
+We now merge this back to the `snps` table for each trait.
 
-```bash
-wget -O data/vcf/all.snp.info.vcf.gz "http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/data_collections/1000_genomes_project/release/20181203_biallelic_SNV/ALL.wgs.shapeit2_integrated_v1a.GRCh38.20181129.sites.vcf.gz"
-```
-
-We use this to create a subset of SNPs that we later subset from the large VCF files. 
-As this is not a standard VCF, we read this with standard R functions.
-
-```{r}
-# we only read a few of the columns
-snps <- read_tsv("data/vcf/all_snp_info.vcf.gz", 
-                 comment = "#", 
-                 col_select = c(1, 2, 4, 5),
-                 col_names = FALSE)
-colnames(snps) <- c("chrom", "pos", "ref", "alt")
-```
-
-We then clean the SNPs associated with each trait.
 
 ### Type 2 diabetes
 
@@ -84,8 +91,10 @@ t2d <- read_tsv("data/gwas_catalogue/t2d_GCST006801.tsv",
 t2d <- t2d |> 
   select(chrom = chr_id, pos = chr_pos, effect = or_or_beta, 
          risk_allele = strongest_snp_risk_allele) |> 
-  mutate(chrom = paste0("chr", chrom),
-         risk_allele = str_remove(risk_allele, ".*-"))
+  mutate(chrom = as.character(chrom)) |> 
+  separate(risk_allele, 
+           into = c("id", "risk_allele"), 
+           sep = "-")
 
 # collapse linked SNPs
 t2d <- t2d |> 
@@ -96,11 +105,12 @@ t2d <- t2d |>
   group_by(chrom, cluster) |> 
   slice_max(effect) |> 
   ungroup() |> 
-  select(-cluster)
+  select(id, effect, risk_allele)
 
 # filtered SNPs
 t2d_snps <- snps |> 
-  inner_join(t2d, by = c("chrom", "pos"))
+  inner_join(t2d, 
+             by = "id")
 
 # adjust effect sizes
 t2d_snps <- t2d_snps |> 
@@ -124,8 +134,10 @@ chronotype <- read_tsv("data/gwas_catalogue/chronotype_GCST007565.tsv",
 chronotype <- chronotype |> 
   select(chrom = chr_id, pos = chr_pos, effect = or_or_beta, 
          risk_allele = strongest_snp_risk_allele) |> 
-  mutate(chrom = paste0("chr", chrom),
-         risk_allele = str_remove(risk_allele, ".*-"))
+  mutate(chrom = as.character(chrom)) |> 
+  separate(risk_allele, 
+           into = c("id", "risk_allele"), 
+           sep = "-")
 
 # collapse linked SNPs
 chronotype <- chronotype |> 
@@ -136,11 +148,11 @@ chronotype <- chronotype |>
   group_by(chrom, cluster) |> 
   slice_max(effect) |> 
   ungroup() |> 
-  select(-cluster)
+  select(id, effect, risk_allele)
 
 # filtered SNPs
 chronotype_snps <- snps |> 
-  inner_join(chronotype, by = c("chrom", "pos"))
+  inner_join(chronotype, by = "id")
 
 # adjust effect sizes
 chronotype_snps <- chronotype_snps |> 
@@ -163,8 +175,10 @@ coffee <- read_tsv("data/gwas_catalogue/coffee_GCST001032.tsv",
 coffee <- coffee |> 
   select(chrom = chr_id, pos = chr_pos, effect = or_or_beta, 
          risk_allele = strongest_snp_risk_allele) |> 
-  mutate(chrom = paste0("chr", chrom),
-         risk_allele = str_remove(risk_allele, ".*-"))
+  mutate(chrom = as.character(chrom)) |> 
+  separate(risk_allele, 
+           into = c("id", "risk_allele"), 
+           sep = "-")
 
 # collapse linked SNPs
 coffee <- coffee |> 
@@ -175,11 +189,11 @@ coffee <- coffee |>
   group_by(chrom, cluster) |> 
   slice_max(effect) |> 
   ungroup() |> 
-  select(-cluster)
+  select(id, effect, risk_allele)
 
 # filtered SNPs
 coffee_snps <- snps |> 
-  inner_join(coffee, by = c("chrom", "pos"))
+  inner_join(coffee, by = "id")
 
 # adjust effect sizes
 coffee_snps <- coffee_snps |> 
@@ -202,8 +216,10 @@ blood <- read_tsv("data/gwas_catalogue/blood_GCST001235.tsv",
 blood <- blood |> 
   select(chrom = chr_id, pos = chr_pos, effect = or_or_beta, 
          risk_allele = strongest_snp_risk_allele) |> 
-  mutate(chrom = paste0("chr", chrom),
-         risk_allele = str_remove(risk_allele, ".*-"))
+  mutate(chrom = as.character(chrom)) |> 
+  separate(risk_allele, 
+           into = c("id", "risk_allele"), 
+           sep = "-")
 
 # collapse linked SNPs
 blood <- blood |> 
@@ -214,11 +230,11 @@ blood <- blood |>
   group_by(chrom, cluster) |> 
   slice_max(effect) |> 
   ungroup() |> 
-  select(-cluster)
+  select(id, effect, risk_allele)
 
 # filtered SNPs
 blood_snps <- snps |> 
-  inner_join(blood, by = c("chrom", "pos"))
+  inner_join(blood, by = "id")
 
 # adjust effect sizes
 blood_snps <- blood_snps |> 
@@ -239,7 +255,7 @@ To make the regional plots more interesting, we sample SNPs densely around the c
 We do this by performing an interval join 500Kb around each causal SNP.
 The disadvantage of this is that it causes some distortions in the p-value histogram and Q-Q plot, but nothing major.
 
-We start by creating intervals for each SNP
+We start by creating intervals for each SNP:
 
 ```{r}
 causal_intervals <- bind_rows(chronotype_snps, coffee_snps, 
@@ -252,131 +268,79 @@ We then create an interval join between this table and the full SNPs table:
 
 ```{r}
 causal_snps <- snps |> 
-  select(chrom, pos) |> 
+  select(chrom, pos, id) |> 
   inner_join(causal_intervals, 
              by = join_by(chrom, between(pos, start, end))) |> 
-  # we don't need these columns
-  select(-start, -end)
+  pull(id)
 ``` 
 
 Then, we randomly sample 5% of the SNPs, and join back this set of SNPs:
 
 ```{r}
 set.seed(20250225)
-snps_sample <- snps |> 
-  # sample 5% of SNPs, but retain all chrX SNPs for sex QC
-  filter(ifelse(chrom == "chrX", TRUE, runif(n()) <= 0.05)) |>
-  # bring back the causal SNPs
-  full_join(causal_snps, by = c("chrom", "pos")) |> 
-  # sort and ensure chromosome is a factor
-  arrange(chrom, pos) |> 
-  mutate(chrom = factor(chrom, levels = c(paste0("chr", 1:22), "chrX")))
+# faster than using dplyr::slice_sample
+snps_sample <- sample(snps$id, round(0.05*nrow(snps)))
+
+# bring back the causal SNPs
+snps_sample <- unique(c(snps_sample, causal_snps))
 ```
 
+Visualise the SNPs, as a sanity check:
+
 ```{r}
-snps_sample |> 
+snps |> 
+  filter(id %in% snps_sample) |>
   count(chrom) |> 
   ggplot(aes(n, chrom)) + geom_col()
   
-snps_sample |> 
+snps |> 
+  filter(id %in% snps_sample) |>
+  slice_sample(n = 10000) |> 
   mutate(y = rnorm(n())) |> 
-  sample_n(10000) |> 
   ggplot(aes(pos, y)) +
   geom_point(shape = "|") +
   facet_grid( ~ chrom, scale = "free_x", space = "free_x")
   
-snps_sample |> 
-  sample_n(1000e3) |> 
+snps |> 
+  filter(id %in% snps_sample) |>
+  slice_sample(n = 1000e3) |> 
   ggplot(aes(pos/1e6, chrom)) +
   geom_bin_2d(binwidth = c(1, 1)) +
   theme_classic()
 ```
 
-Finally, we write this list of SNPs to a file to later subset the VCF files with `bcftools`:
+Finally, we write this list of SNPs to a file to later subset the VCF files with `plink2`:
 
 ```{r}
-snps_sample |> 
-  write_tsv("data/1000G_filtered_snps.tsv", 
+tibble(id = snps_sample) |> 
+  write_tsv("data/plink/subset_snp_ids.tsv", 
             col_names = FALSE)
 ```
 
 
-## Process 1000G data
+## Extract genotypes for causal SNPs
 
-The latest version of these data are published in [Byrska-Bishop et al. (2022)](https://doi.org/10.1016/j.cell.2022.08.004). 
-The data are provided as the "[1000 Genomes 30x on GRCh38](https://www.internationalgenome.org/data-portal/data-collection/30x-grch38)" data collection.
-
-We download slightly older files, which only contain biallelic calls (to save space/time). 
-For each chromosome, we get the genotype file (`.vcf`) and its index (`.tbi`):
+We convert the original PLINK files to VCF, for convenience of extracting genotypes and later adding missing data with a custom script. 
 
 ```bash
-# download genotypes
-for i in {1..22} X
-do
-  # genotypes from 1000G server
-  wget -O data/vcf/chr${i}.vcf.gz "http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/data_collections/1000_genomes_project/release/20181203_biallelic_SNV/ALL.chr${i}.shapeit2_integrated_v1a.GRCh38.20181129.phased.vcf.gz"
-  wget -O data/vcf/chr${i}.vcf.gz.tbi "http://ftp.1000genomes.ebi.ac.uk/vol1/ftp/data_collections/1000_genomes_project/release/20181203_biallelic_SNV/ALL.chr${i}.shapeit2_integrated_v1a.GRCh38.20181129.phased.vcf.gz.tbi"
-  
-  # annotations from ENSENBL
-  wget -O data/vcf/chr${i}.annot.vcf.gz "https://ftp.ensembl.org/pub/current_variation/vcf/homo_sapiens/homo_sapiens-chr${i}.vcf.gz"
-  wget -O data/vcf/chr${i}.annot.vcf.gz.csi "https://ftp.ensembl.org/pub/current_variation/vcf/homo_sapiens/homo_sapiens-chr${i}.vcf.gz.csi"
-done
+# convert to VCF
+plink2 \
+  --pfile data/plink/all_hg38 \
+  --export vcf bgz \
+  --keep data/plink/subset_sample_ids.tsv \
+  --extract data/plink/subset_snp_ids.tsv \
+  --out data/vcf/1000G_subset
+
+bcftools index data/vcf/1000G_subset.vcf.gz
 ```
 
-The VCF files from ENSEMBL don't contain the actual genotypes, but they contain the variant IDs, which we extract to a separate file to later annotate the genotype VCF:
-
-```bash
-printf "#CHROM\tPOS\tID" > data/vcf/snp_ids.tsv
-for i in {1..22} X
-do
-  echo "chr${i}"
-  bcftools view -H data/vcf/chr${i}.annot.vcf.gz | cut -f 1,2,3 | sed 's/^/chr/' >> data/vcf/snp_ids.tsv
-done
-bgzip -c data/vcf/snp_ids.tsv > data/vcf/snp_ids.tsv.gz
-tabix -s 1 -b 2 -e 2 data/vcf/snp_ids.tsv.gz
-```
-
-Then, we merge all the VCF files, as well as filter them for the SNPs and samples selected above:
-
-```bash
-threads=24  # use 24 CPUs
-
-# temporarily create a list of IDs from sample_info file
-cut -f 2 data/sample_info.tsv | tail -n +2 > temp_filter_ids.tsv
-
-# create variable with files listed numerically rather than alphabetical
-# otherwise we will get chr1, chr10, chr11, etc...
-vcf_files=$(ls data/vcf/chr*.vcf.gz | grep -v "annot" | sort -V)
-
-# concatenate and subset the files
-bcftools concat \
-  --allow-overlaps \
-  --regions-file data/1000G_filtered_snps.tsv \
-  --threads $threads \
-  $vcf_files \
-  | bcftools view \
-  --samples-file temp_filter_ids.tsv \
-  --threads $threads \
-  | bcftools annotate \
-  --annotations data/vcf/snp_ids.tsv.gz \
-  --columns CHROM,POS,ID \
-  --header-lines <(echo "##INFO=<ID=ID,Number=1,Type=String,Description=\"SNP ID\">") \
-  --output data/vcf/1000G_subset.vcf.gz \
-  --output-type z \
-  --threads $threads
-
-# remove temporary file
-rm temp_filter_ids.tsv
-
-# index VCF
-bcftools index --tbi --threads $threads data/vcf/1000G_subset.vcf.gz
-```
-
-Finally, we extract the genotypes of target (causal) variants into a TSV file to later simulate our traits: 
+Extract the genotypes of target (causal) variants into a TSV file, which will be used to simulate our traits: 
 
 ```bash
 for trait in chronotype t2d coffee blood 
 do 
+  echo "Extracting genotypes for $trait"
+  
   # create file headers
   samples=$(bcftools query -l data/vcf/1000G_subset.vcf.gz | tr '\n' '\t' | sed 's/\t$//')
   printf "snp\t$samples\n" > data/gwas_catalogue/${trait}_geno.tsv
@@ -402,7 +366,6 @@ do
 done
 ```
 
-
 ## Simulating traits
 
 Now we have the pieces to simulate our traits: 
@@ -410,14 +373,42 @@ Now we have the pieces to simulate our traits:
 - The genotypes
 - The effect sizes
 
-The following is a fairly long function to simulate a trait based on a genotype matrix and effect size vector.
+The following is a function to simulate a trait based on a genotype matrix and effect size vector.
 
 ```{r}
+#' Simulate a Trait Based on Genotype Matrix and Effect Sizes
+#'
+#' This function simulates a quantitative or binary trait based on a given genotype matrix, 
+#' effect sizes, and heritability. Optionally, it can simulate a binary trait by specifying 
+#' a prevalence.
+#'
+#' @param genotype_matrix A numeric matrix where rows represent individuals and columns 
+#'        represent genetic variants (e.g., SNPs). Each entry corresponds to the genotype 
+#'        value for a given individual and variant.
+#' @param effect_sizes A numeric vector of effect sizes corresponding to the genetic variants. 
+#'        The length of this vector must match the number of columns in `genotype_matrix`.
+#' @param h2 A numeric value representing the heritability of the trait. Must be between 0 and 1. 
+#'        Default is 0.5.
+#' @param prevalence A numeric value representing the prevalence of the trait in the population. 
+#'        If specified, the function simulates a binary trait. Must be between 0 and 1. 
+#'        Default is `NULL`, which simulates a quantitative trait.
+#'
+#' @return A numeric vector representing the simulated trait values for each individual. 
+#'         If `prevalence` is specified, the vector contains binary values (0 or 1).
+#'
+#' @examples
+#' # Simulate a quantitative trait
+#' genotype_matrix <- matrix(rbinom(1000, 2, 0.5), nrow = 100, ncol = 10)
+#' effect_sizes <- runif(10, -1, 1)
+#' simulated_trait <- simulate_trait(genotype_matrix, effect_sizes, h2 = 0.7)
+#'
+#' # Simulate a binary trait
+#' simulated_binary_trait <- simulate_trait(genotype_matrix, effect_sizes, h2 = 0.7, prevalence = 0.1)
+#'
+#' @export
 simulate_trait <- function(genotype_matrix, 
                            effect_sizes, 
                            h2 = 0.5, 
-                           covariates = NULL, 
-                           covariate_effects = NULL, 
                            prevalence = NULL) {
   
   # Sanity checks
@@ -433,21 +424,10 @@ simulate_trait <- function(genotype_matrix,
   if (!is.null(prevalence) && (!is.numeric(prevalence) || prevalence <= 0 || prevalence >= 1)) 
     stop("prevalence must be a numeric value between 0 and 1 if specified.")
   
-  if (!is.null(covariates)) {
-    if (!is.matrix(covariates) || !is.numeric(covariates)) 
-      stop("covariates must be a numeric matrix. Use model.matrix() if necessary.")
-    
-    if (is.null(covariate_effects)) {
-      covariate_effects <- rnorm(ncol(covariates), mean = 0, sd = 0.1)
-    } else if (length(covariate_effects) != ncol(covariates)) {
-      stop("Length of covariate_effects must match the number of columns in covariates.")
-    }
-  }
-  
   if (!is.null(prevalence)) {
-    # we should transform OR to liability scale somehow
+    # transform OR to liability scale, which is not trivial
     # see https://doi.org/10.1007/s10519-021-10042-2
-    # using Pawitan transformation
+    # using Pawitan transformation from that paper
     p = colSums(genotype_matrix)/(nrow(genotype_matrix)*2)
     var = 2*p*(1-p)*log(effect_sizes)^2
     var = var/(var + pi^2 / 3)
@@ -461,18 +441,13 @@ simulate_trait <- function(genotype_matrix,
   # Scale genetic component to desired proportion of total variance
   genetic_component <- genetic_component / sqrt(var_g) * sqrt(h2)
   
-  # Compute covariate effects
-  covariate_component <- ifelse(!is.null(covariates),
-                                as.numeric(covariates %*% covariate_effects),
-                                0)
-  
   # Environmental noise to explain remaining variance (1 - h2)
   environmental_noise <- rnorm(nrow(genotype_matrix), 
                                mean = 0, 
                                sd = sqrt(1 - h2))
   
   # Compute trait value (equivalent to "liability" for a binary trait)
-  trait_values <- genetic_component + covariate_component + environmental_noise
+  trait_values <- genetic_component + environmental_noise
   
   # Convert to binary trait if prevalence is provided
   if (!is.null(prevalence)) {
@@ -485,7 +460,7 @@ simulate_trait <- function(genotype_matrix,
 }
 ```
 
-We now simulate trait data (this can later be generalised to a function):
+Here we simulate data for one of the traits, but later we loop through all traits.
 
 ```{r}
 # effect sizes
@@ -502,12 +477,12 @@ genos <- read_tsv("data/gwas_catalogue/blood_geno.tsv",
 genos <- genos |> column_to_rownames("snp") |> as.matrix() |> t()
 
 # simulate trait
-trait <- simulate_trait(genos, effects[, 1], h2 = 0.001)
+trait <- simulate_trait(genos, effects[, 1], h2 = 0.1)
 
 # visual sanity check
 cbind(genos, trait = trait) |> 
   as_tibble(rownames = "sample") |> 
-  pivot_longer(matches("chr"), names_to = "snp", values_to = "genotype") |> 
+  pivot_longer(matches("_"), names_to = "snp", values_to = "genotype") |> 
   group_by(snp, genotype) |> 
   summarise(trait_mean = mean(trait), 
             trait_sd = sd(trait)) |> 
@@ -547,7 +522,7 @@ sim_traits <- pmap(sim_config, function(trait, h2, prevalence){
     sim <- simulate_trait(genos, effects, h2 = h2, prevalence = prevalence)
   }
   
-  out <- tibble(id = rownames(genos))
+  out <- tibble(iid = rownames(genos))
   # randomly add some missing values
   out[[trait]] <- ifelse(runif(length(sim)) < 0.01, NA, sim)
     
@@ -556,14 +531,14 @@ sim_traits <- pmap(sim_config, function(trait, h2, prevalence){
 names(sim_traits) <- sim_config$trait
 
 pheno <- sim_traits |> 
-  reduce(full_join, by = "id") |> 
+  reduce(full_join, by = "iid") |> 
   # scale up continuous traits to realistic values
   mutate(coffee = 130 + coffee * 20,
          blood = 45 + blood * 5)
 
 # visual sanity check
 pheno |> 
-  pivot_longer(-id, 
+  pivot_longer(-iid, 
                names_to = "trait", 
                values_to = "value") |> 
   ggplot(aes(value)) + 
@@ -575,21 +550,18 @@ Finally, we write a PLINK-compatible phenotype file.
 We also add a sex-effect for coffee consumption, and recode the binary traits to 1/2 (PLINK standard). 
 
 ```{r}
-sample_info <- read_tsv("data/sample_info.tsv")
-
 sample_info |> 
-  select(family_id, individual_id, gender) |> 
-  left_join(pheno, by = c("individual_id" = "id")) |> 
-  rename(FID = family_id, IID = individual_id) |> 
+  select(iid, sex) |> 
+  full_join(pheno, by = "iid") |> 
+  rename(IID = iid) |> 
   # recode cases/controls as 1/2, which PLINK uses
   mutate(chronotype = chronotype + 1, 
          t2d = t2d + 1) |> 
   # add sex effect to coffee
-  mutate(coffee = coffee + 10 * (gender == 1)) |> 
-  select(-gender) |> 
+  mutate(coffee = coffee + 10 * (sex == 1)) |> 
+  select(-sex) |> 
   write_tsv("data/phenotypes.tsv")
 ```
-
 
 ## Convert VCF to plink
 
@@ -605,16 +577,20 @@ python utils/vcf_missing.py -i data/vcf/1000G_subset.vcf.gz -o temp.vcf.gz
 ```
 
 We convert our VCF file to both new and old (version 1) PLINK files. 
-We retain the information about our samples by creating a temporary "fam" file from our `sample_info.tsv` table. 
+We retain the information about our samples by creating a temporary "psam" file from the original plink files. 
 
 ```bash
-# temporary FAM file setting phenotypes to missing
-tail -n +2 data/sample_info.tsv | cut -f 1,2,3,4,5,6 | sed 's/0$/NA/' > temp.fam
+# temporary psam file
+plink2 \
+  --pfile data/plink/all_hg38 \
+  --make-just-psam \
+  --keep data/plink/subset_sample_ids.tsv \
+  --out temp
 
 # BED format for PLINK1 or software that only supports it
 plink2 \
   --vcf temp.vcf.gz \
-  --fam temp.fam \
+  --psam temp.psam \
   --split-par hg38 \
   --make-bed \
   --out data/plink/1000G_subset
@@ -622,11 +598,30 @@ plink2 \
 # new format
 plink2 \
   --vcf temp.vcf.gz \
-  --fam temp.fam \
+  --psam temp.psam \
   --split-par hg38 \
   --make-pgen \
   --out data/plink/1000G_subset
 
 # remove temporary files
-rm temp.vcf.gz temp.fam
+rm temp.*
+```
+
+Finally, swap the sex of two individuals in the psam file.
+
+```bash
+# Flip the sex of a couple of individuals (12th and 23rd lines)
+awk '
+  BEGIN { OFS="\t" }
+  NR==12 {
+    if ($2==1) $2=2; 
+    else if ($2==2) $2=1
+  } 
+  NR==23 {
+    if ($2==1) $2=2; 
+    else if ($2==2) $2=1
+  } 
+  1
+' data/plink/1000G_subset.psam > temp.psam 
+mv temp.psam data/plink/1000G_subset.psam
 ```
